<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorTransparent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_alert_dialog"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_baseline_close_24"
            android:contentDescription="@string/cancel" />


        <TextView
            android:id="@+id/heading_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/casting"
            android:textColor="@color/purple_700"
            android:textSize="17sp"
            android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInpHeadCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/heat_number"
                app:endIconContentDescription="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextHeatInp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F6F4F4"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/customLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInpSize"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:hint="@string/size"
                    app:endIconContentDescription="@string/username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#F6F4F4"
                        android:inputType="textPersonName"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInpClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:hint="@string/class_casting"
                    app:endIconContentDescription="@string/username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextClass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#F6F4F4"
                        android:inputType="textPersonName"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInpTypeofCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/type_of_casting"
                app:endIconContentDescription="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTypeofCast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F6F4F4"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInpMaterialofConst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/material_of_construction"
                app:endIconContentDescription="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMaterialofConst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F6F4F4"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/submit"
                android:textColor="@color/purple_700"
                tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/storyset"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_reading_list_rafiki"
        android:contentDescription="@string/app_name" />

</RelativeLayout>