<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorTransparent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_alert_dialog"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/more_cancel_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_baseline_close_24"
            android:contentDescription="@string/cancel" />


        <RelativeLayout
            android:id="@+id/more_cast_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">


            <TextView
                android:id="@+id/heading_cast_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/casting"
                android:textColor="@color/purple_700"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout

                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/heading_cast_more"
                android:layout_marginTop="6dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/size_no_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="12dp"
                    android:text="@string/size"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/class_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="12dp"
                    android:text="@string/class_casting"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/toc_displaya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear2"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:text="@string/type_of_casting"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/moc_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toc_displaya"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:text="@string/material_of_construction"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/third_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/moc_display"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:text="@string/material_of_construction"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:visibility="gone" />


        </RelativeLayout>


        <ImageView
            android:id="@+id/barcode_display"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            android:src="@color/purple_700" />

        <TextView
            android:id="@+id/barcode_number_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/material_of_construction"
            android:textColor="@color/black" />
    </LinearLayout>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="65dp"
        android:id="@+id/storyset"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_iconmonstr_check_mark_6"
        android:contentDescription="@string/app_name" />


</RelativeLayout>