<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_bottom_sheet"
    android:orientation="vertical"
    tools:context=".AddValves"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/valveToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Add Valves"
            android:background="@color/purple_700"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/valveName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/valve_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editValveName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F6F4F4"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bar_id_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/bar_id_separated_by_a_comma"
        app:endIconContentDescription="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_bar_id_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F6F4F4"
            android:inputType="textMultiLine"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/generate_qr_code"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>