<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/ProgressBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

        <ImageView
            android:layout_marginTop="45dp"
            android:layout_width="250dp"
            android:src="@drawable/ic_authentication_amico"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/authimage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/login"
            android:textColor="@color/purple_700"
            android:textSize="30sp"
            android:typeface="serif" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authEmail"
            android:layout_width="match_parent"
            android:layout_margin="12dp"

            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:endIconContentDescription="@string/username"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/getEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:backgroundTint="#F6F4F4"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authPass"
            android:layout_width="match_parent"
            android:layout_margin="12dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:endIconContentDescription="@string/password"
            app:endIconMode="password_toggle"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/getPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F6F4F4"
                android:inputType="textPassword"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/authLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="12dp"
        android:text="@string/login"
        android:textColor="@color/purple_700"
        tools:ignore="DuplicateSpeakableTextCheck" />
</LinearLayout>